fix: mobile z-index clash

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,28 +1,34 @@
 :root {
-  --color-black: #00000F;
-  --color-text: #313151;
-  --color-white: #FBFFFF; 
-  --color-primary: #002A54; 
-  --color-accent: #8AA8FF; 
-  --color-secondary: #FF9800; 
+	--color-black: #00000f;
+	--color-text: #313151;
+	--color-white: #fbffff;
+	--color-primary: #002a54;
+	--color-accent: #8aa8ff;
+	--color-secondary: #ff9800;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
+	box-sizing: border-box;
+	margin: 0;
 }
 
 html {
-  background: var(--color-white);
-  color: var(--color-text);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
-  line-height: 1.45;
+	background: var(--color-white);
+	color: var(--color-text);
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	font-size: 16px;
+	line-height: 1.45;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
-  color: var(--color-black);
-  line-height: 1.1;
+	color: var(--color-black);
+	line-height: 1.1;
+}
+
+.notifications-wrapper {
+	position: relative;
+	z-index: 10;
 }
